fix vertical alignment

--- a/main.css
+++ b/main.css
@@ -143,7 +143,7 @@ html {
 .lower {
   display: flex;
   justify-content: center;
-  padding-left: 60px;
+  padding-left: 70px;
 }
 
 #live-slide {
